# caffe-builder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build_appveyor.cmd  build_v120_x64.cmd  build_v140_x64.cmd  download_ninja.cmd  download_ninja.ps1  fix_library_paths.py  hash.bat  hash.cmake  replace_absolute_paths.py  setenv.cmd
cmake/: ArchiveDownloadScheme.cmake  BjamScheme.cmake  CMakeScheme.cmake  ForceDependentOption.cmake  GitRepoDownloadScheme.cmake  InitialCache.cmake.in  RobocopyTarget.cmake  SuperBuilderUtils.cmake  buildem_all.cmake  buildem_boost_recipe.cmake  buildem_cmake_recipe.cmake  buildem_download_package.cmake  buildem_status.cmake  caffe-builder-config.cmake.in  prependpath.bat.in
cmake/configs/: Appveyor.cmake  AppveyorPart1.cmake  Caffe.cmake  Default.cmake
cmake/modules/: FindBoost.cmake  FindCaffe.cmake  FindGFlags.cmake  FindGlog.cmake  FindHDF5.cmake  FindLMDB.cmake  FindLevelDB.cmake  FindMatio.cmake  FindOpenBLAS.cmake  FindOpenCV.cmake  FindProtobuf.cmake  FindSnappy.cmake  FindZLIB.cmake  GenericFindModuleConfig.cmake  TargetCopyDependencies.cmake
